--- a/cat-dev/genome_editing.yml
+++ b/cat-dev/genome_editing.yml
@@ -1,4 +1,10 @@
 tools:
+- name: mageck_count
+  owner: iuc
+  revisions:
+  - 3edbd1ff5602
+  tool_panel_section_label: Genome Editing
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: mageck_gsea
   owner: iuc
   revisions:
