--- a/cat-dev/genome_editing.yml
+++ b/cat-dev/genome_editing.yml
@@ -11,9 +11,21 @@ tools:
   - d46e36492bff
   tool_panel_section_label: Genome Editing
   tool_shed_url: toolshed.g2.bx.psu.edu
+- name: mageck_mle
+  owner: iuc
+  revisions:
+  - b36c85e37a48
+  tool_panel_section_label: Genome Editing
+  tool_shed_url: toolshed.g2.bx.psu.edu
 - name: mageck_pathway
   owner: iuc
   revisions:
   - 9744e1124d0f
+  tool_panel_section_label: Genome Editing
+  tool_shed_url: toolshed.g2.bx.psu.edu
+- name: mageck_test
+  owner: iuc
+  revisions:
+  - 688a8eccea71
   tool_panel_section_label: Genome Editing
   tool_shed_url: toolshed.g2.bx.psu.edu
